# CrowXR

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
app/: CMakeLists.txt
app/android-arm64/: settings.gradle
app/android-arm64/app/: build.gradle
app/android-arm64/app/src/androidTest/java/com/crowxr/app/: ExampleInstrumentedTest.java
app/android-arm64/app/src/main/: AndroidManifest.xml
app/android-arm64/app/src/main/java/com/crowxr/app/: MainActivity.java
app/android-arm64/app/src/main/res/layout/: activity_main.xml
app/android-arm64/app/src/main/res/values/: strings.xml  themes.xml
app/android-arm64/app/src/main/res/values-night/: themes.xml
app/android-arm64/app/src/test/java/com/crowxr/app/: ExampleUnitTest.java
app/android-arm64/gradle/: libs.versions.toml
app/android-arm64/gradle/wrapper/: gradle-wrapper.properties
app/windows-x64/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  ImageProcess.cpp
src/include/: ImageProcess.h  ImageProcess.hpp
